--- a/MyyCommerce/MyyCommerce/Views/Checkout/_CheckoutProdutosPartial.cshtml
+++ b/MyyCommerce/MyyCommerce/Views/Checkout/_CheckoutProdutosPartial.cshtml
@@ -28,7 +28,7 @@
                     R$ @((produto.Quantidade * produto.Produto.Valor).ToString("n2"))
                 </td>
                 <td>
-                    <a href="#" class="btn btn-danger btn-sm removerProdutoBtn" data-id="@produto.ProdutoId"><i class="fa fa-times"></i> Remover </a>
+                    <a class="btn btn-danger btn-sm removerProdutoBtn" data-id="@produto.ProdutoId"><i class="fa fa-times"></i> Remover </a>
                 </td>
             </tr>
         }
