--- a/MyyCommerce/MyyCommerce/Views/Checkout/_CheckoutProdutosPartial.cshtml
+++ b/MyyCommerce/MyyCommerce/Views/Checkout/_CheckoutProdutosPartial.cshtml
@@ -40,7 +40,7 @@
             </td>
             <td>
             </td>
-            <td class="bold">
+            <td class="bold" id="ValorTotalTabela">
                 R$ @Model.ValorTotal.ToString("n2")
             </td>
             <td>
